ref #36 Fix z-index evaluation bug in jqueryui dialogs. Add 'destroy' feature to chosen plugin.

--- a/creme/creme_core/static/icecream/creme_core/css/chosen/chosen.css
+++ b/creme/creme_core/static/icecream/creme_core/css/chosen/chosen.css
@@ -22,7 +22,7 @@
   -moz-box-shadow   : 0 4px 5px rgba(0,0,0,.15);
   -o-box-shadow     : 0 4px 5px rgba(0,0,0,.15);
   box-shadow        : 0 4px 5px rgba(0,0,0,.15);
-  z-index: 1010;
+  z-index: 1050;
 }
 /* @end */
 
